Minuten zu lesen eingedeutscht

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,9 +15,9 @@ layout: default
   {% endif %}
   <span class="post-meta small">
   {% if page.minutes %}
-    {{ page.minutes }} minute read
+    {{ page.minutes }} Minuten zu lesen
   {% else %}
-    {{ minutes }} minute read
+    {{ minutes }} Minuten zu lesen
   {% endif %}
   </span>
 </div>
