--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,9 +32,9 @@ layout: default
   {% endif %}
   <span class="post-meta small">
   {% if page.minutes %}
-    {{ page.minutes }} Minuten zu lesen
+    {{ page.minutes }} Min. zu lesen
   {% else %}
-    {{ minutes }} Minuten zu lesen
+    {{ minutes }} Min. zu lesen
   {% endif %}
   </span>
 </div>
