fonts.com einbinden

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,8 @@
       <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     {% endif %}
 
+    <link type="text/css" rel="stylesheet" href="http://fast.fonts.net/cssapi/86eb9d08-56b9-4c10-94d8-7bee4380e9f3.css"/>
+
     <!-- Verifications -->
     {% if site.google_verification %}
       <meta name="google-site-verification" content="{{ site.google_verification }}" />
