--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,8 @@ layout: default
 
 <div class="post-header mb2">
   <h1>{{ page.title }}</h1>
-  <span class="post-meta"><!-- Whitespace added for readability -->
+  <span class="post-meta">Von {{page.author}}</span>
+  <span class="post-meta">am <!-- Whitespace added for readability -->
   {% assign m = page.date | date: "%-m" %}
   {{ page.date | date: "%-d." }}
   {% case m %}
