--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,8 +41,11 @@ layout: default
 </div>
 
 <article class="post-content">
+<p class="page-summary">{{ page.summary }}</p>
   {{ content }}
 </article>
+
+
 
 {% if site.show_sharing_icons %}
   {% include share_buttons.html %}
