Post Footer angepasst
github integration

--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -1,10 +1,13 @@
 <div class="py2 post-footer">
-  <img src="/images/me.jpeg" alt="John Otander" class="avatar" />
   <p>
-    Pixyll is an open-source Jekyll theme that's built by <a href="http://johnotander.com">John Otander</a>.
-    When he's not writing code and building things, he likes to ski. A. Lot.
+    Du willst den Text <a href="https://github.com/efelcie/efelcie.github.io/edit/master/{{ page.path }}">verbessern</a>? Tu es! Klick einfach und schlage mir die Verbesserung vor! Du brauchst nur einen (gratis) GitHub-Account. Ich liebe Verbesserung.
   </p>
   <p>
-    Follow him on <a href="https://twitter.com/4lpine">Twitter</a>.
+  	Die <a href="https://github.com/efelcie/efelcie.github.io/commits/master/{{ page.path }}">Veränderungen</a> seit der Veröffentlichung findest du auch auf GitHub.
   </p>
+  <p>
+  	Wenn du sonstige Anmerkungen, Kritik oder Wünsche für einen neuen Artikel hast. Sei so frei und tu das <a href="https://github.com/efelcie/efelcie.github.io/issues/new">hier</a>!
+  </p>
+
 </div>
+
