Überschirift Feedback im Footer

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -10,6 +10,7 @@ abbr {
 p {
   color: #333;
   line-height: 1.5;
+  font-weight: 200;
 }
 
 small,
@@ -19,3 +20,12 @@ small,
 h1 {
 	font-family:'Caslon Graphique W01';
 }
+
+.page-summary {
+	font-family:'Gentona W00';
+	font-weight: 200;
+	color: #7a7a7a;
+    font-size: 1.5rem;
+
+}
+
